logs/libsnmp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/libsnmp'...
Compiling './lib/python3.5/site-packages/libsnmp/asynrole.py'...
***   File "./lib/python3.5/site-packages/libsnmp/asynrole.py", line 17
    def __init__(self, (cb_fun, cb_ctx), dst=(None, 0), interface=('0.0.0.0', 0), timeout=0.25):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libsnmp/rfc1155.py'...
***   File "./lib/python3.5/site-packages/libsnmp/rfc1155.py", line 293
    MINVAL = -2147483648L
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libsnmp/rfc1902.py'...
***   File "./lib/python3.5/site-packages/libsnmp/rfc1902.py", line 34
    MINVAL = -2147483648L
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libsnmp/rfc1905.py'...
***   File "./lib/python3.5/site-packages/libsnmp/rfc1905.py", line 22
    max_bindings = 2147483647L
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libsnmp/snmpmanager.py'...
***   File "./lib/python3.5/site-packages/libsnmp/snmpmanager.py", line 46
    nextRequestID = 0L      # global counter of requestIDs
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libsnmp/v1.py'...
***   File "./lib/python3.5/site-packages/libsnmp/v1.py", line 27
    nextRequestID = 0L      # global counter of requestIDs
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libsnmp/v2.py'...
***   File "./lib/python3.5/site-packages/libsnmp/v2.py", line 148
    def receiveData(self, manager, cb_ctx, (data, src), (exc_type, exc_value, exc_traceback) ):
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libsnmp-2.0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
